product category 기능 완료 및 테스트 완료, but 등록자 추가 필요